--- a/bag/static/bag/css/bag.css
+++ b/bag/static/bag/css/bag.css
@@ -9,7 +9,8 @@
 
 .order-summary {
     background-color: #dfdfdf;
-    height: fit-content
+    height: fit-content;
+    box-shadow: 0 0.3rem 1.525rem -0.375rem rgb(0 0 0 / 10%);
 }
 
 .order-total {
