--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -1,5 +1,4 @@
 .checkout-details {
-    width: 50%;
     background-color: #dfdfdf;
 }
 
@@ -81,12 +80,14 @@ select:invalid {
     height: 100%;
 }
 
-@media only screen and (max-width: 575px) {
-    .checkout-details {
+@media only screen and (max-width: 767px) {
+    .checked-out-order-summary {
         width: 100%;
     }
+}
 
-    .checked-out-order-summary {
+@media only screen and (max-width: 575px) {
+    .checkout-details {
         width: 100%;
     }
 }
