--- a/templates/components/toasts/toast_success.html
+++ b/templates/components/toasts/toast_success.html
@@ -3,12 +3,12 @@
     aria-live="assertive" aria-atomic="true">
     <div class="arrow-up"></div>
     <div class="toast-header bg-white text-dark rounded-top">
-        <strong class="me-auto text-success"><i class="fa-solid fa-bicycle"></i>&nbsp;Success!</strong>
+        <p class="mb-0">{{ message|safe }}</p>
         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
         </button>
     </div>
     <div class="toast-body bg-white rounded-bottom">
-        {{ message|safe }}
+
 
         {% if grand_total > 10  %}
         <p class="logo-font bg-white text-black mt-2 liner">Your Bag ({{ product_count }})&nbsp;</p>
