feat: Create Modal for Login/Register

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
 
     {% include 'components/footer.html' %}
     {% include 'components/scripts.html' %}
-
+    {% include "components/auth_modal.html" %}
     {% block postloadjs %}
     <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', () => {
