--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -159,8 +159,10 @@
                         <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                         <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                         {% else %}
-                        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                        <a href="#authModal" data-bs-toggle="modal" data-bs-target="#authModal"
+                            class="dropdown-item">Register</a>
+                        <a href="#authModal" data-bs-toggle="modal" data-bs-target="#authModal"
+                            class="dropdown-item">Login</a>
                         {% endif %}
                     </div>
                 </li>
