--- a/templates/components/auth_modal.html
+++ b/templates/components/auth_modal.html
@@ -1,32 +1,31 @@
-{% load i18n %}
-<div class="modal fade" id="authModal" tabindex="-1" role="dialog" aria-labelledby="authModal" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+<div class="modal fade" id="auth-modal" tabindex="-1" role="dialog" aria-labelledby="auth-modal-label"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="authModalLabel">Login or Register</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <h5 class="modal-title" id="auth-modal-label">Authentication</h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <ul class="nav nav-tabs" id="authTabs" role="tablist">
+                <!-- Nav tabs -->
+                <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="login-tab" data-toggle="tab" href="#login" role="tab"
-                            aria-controls="login" aria-selected="true">Login</a>
+                        <a class="nav-link active" data-bs-toggle="tab" href="#login" role="tab">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="register-tab" data-toggle="tab" href="#register" role="tab"
-                            aria-controls="register" aria-selected="false">Register</a>
+                        <a class="nav-link" data-bs-toggle="tab" href="#register" role="tab">Register</a>
                     </li>
                 </ul>
-                <div class="tab-content" id="authContent">
-                    <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
-                        <!-- Login form -->
+
+                <!-- Tabs -->
+                <div class="tab-content">
+                    <div class="tab-pane active" id="login" role="tabpanel">
                         <form>
                         </form>
                     </div>
-                    <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
-                        <!-- Register form -->
+                    <div class="tab-pane" id="register" role="tabpanel">
                         <form>
                         </form>
                     </div>
