--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -159,10 +159,10 @@
                         <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                         <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                         {% else %}
-                        <a href="#authModal" data-bs-toggle="modal" data-bs-target="#authModal"
-                            class="dropdown-item">Register</a>
-                        <a href="#authModal" data-bs-toggle="modal" data-bs-target="#authModal"
-                            class="dropdown-item">Login</a>
+                        <a href="#" class="login-link dropdown-item" data-bs-toggle="modal" data-bs-target="#auth-modal"
+                            data-tab-target="#login">Login</a>
+                        <a href="#" class="register-link dropdown-item" data-bs-toggle="modal"
+                            data-bs-target="#auth-modal" data-tab-target="#register">Register</a>
                         {% endif %}
                     </div>
                 </li>
