--- a/templates/components/auth_modal.html
+++ b/templates/components/auth_modal.html
@@ -1,44 +1,48 @@
 {% load i18n %}
+{% load crispy_forms_tags %}
+<!-- Log in / Sign Up Modal-->
 <div class="modal fade" id="auth-modal" tabindex="-1" role="dialog" aria-labelledby="auth-modal-label"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="auth-modal-label">Authentication</h5>
-                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                <!-- Nav tabs -->
+                <ul class="nav nav-tabs" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link nav-link-login active" data-bs-toggle="tab" href="#login" role="tab"><i
+                                class="fa-solid fa-lock-open pe-1"></i>Login</a>
+                    </li>
+                    <li class="nav-item nav-link-register">
+                        <a class="nav-link nav-link-register" data-bs-toggle="tab" href="#register" role="tab"><i
+                                class="fa-regular fa-user pe-1"></i>Register</a>
+                    </li>
+                </ul>
+                <button type="button" class="close btn btn-lg" data-bs-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <!-- Nav tabs -->
-                <ul class="nav nav-tabs" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" data-bs-toggle="tab" href="#login" role="tab">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#register" role="tab">Register</a>
-                    </li>
-                </ul>
                 <!-- Tabs -->
                 <div class="tab-content">
                     <div class="tab-pane active" id="login" role="tabpanel">
                         <form action="{% url 'account_login' %}?next={{request.path}}" method="post">
-                            {% csrf_token %}
                             <input type="hidden" name="next" value="{{ request.GET.next }}" />
-                            {{ logintag }}
-                            <button type="submit">Login</button>
-                            <a href="{% url 'account_reset_password' %}">Forgot Password?</a>
+                            {% csrf_token %}
+                            {{ logintag|crispy  }}
+                            <div class="d-flex align-items-center justify-content-between">
+                                <button type="submit" class="btn btn-cta text-white upper">Login</button>
+                                <a href="{% url 'account_reset_password' %}">Forgot Password?</a>
+                            </div>
                         </form>
                     </div>
                     <div class="tab-pane" id="register" role="tabpanel">
                         <form class="signup" id="signup_form" method="post"
                             action="{% url 'account_signup' %}?next={{request.path}}">
+                            <input type="hidden" name="next" value="{{ request.GET.next }}" />
                             {% csrf_token %}
-                            {{ signuptag }}
-                            {% if redirect_field_value %}
-                            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                            {% endif %}
-                            <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+                            {{ signuptag|crispy  }}
+                            <button type="submit" class="btn btn-cta text-white upper">{% trans "Sign Up" %}
+                                &raquo;</button>
                         </form>
                     </div>
                 </div>
