--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,1 +1,12 @@
 {% extends "base.html" %}
+
+{% block content %}
+<div class="container margin-top pb-4">
+    <div class="d-flex">
+        <div class="allauth-form-inner-content w-100">
+            {% block inner_content %}
+            {% endblock %}
+        </div>
+    </div>
+</div>
+{% endblock %}
