feat: Add Profile Form to template

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -5,13 +5,46 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <hr>
-            <h2 class="logo-font mb-4">My Profile</h2>
-            <hr>
+<!-- User Profile -->
+<main>
+    <section id="profile" class="margin-top mx-3">
+        <div class="container">
+            <h2 class="liner upper">My Profile </h2>
+            <button class="btn pb-4 back-button" onclick="goBack()">&larr; Back</button>
+            <div class="d-flex flex-column flex-md-row justify-content-around mt-md-3">
+                <div class="d-flex flex-row p-lg-5 p-4 mb-4">
+                    <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                        {% csrf_token %}
+                        <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
+                            <legend class="fieldset-label small px-2 auto text-black mb-2">Details</legend>
+                            <div class="d-flex w-100">
+                                <div class="pe-2 flex-grow-1">
+                                    {{ form.default_phone_number | as_crispy_field }}
+                                </div>
+                            </div>
+                        </fieldset>
+                        <fieldset class="rounded mb-4">
+                            <legend class="fieldset-label small text-black px-2 w-auto">Delivery/Billing</legend>
+                            {{ form.default_street_address1 | as_crispy_field }}
+                            {{ form.default_street_address2 | as_crispy_field }}
+                            <div class="d-flex w-100">
+                                <div class="pe-2 flex-grow-1">
+                                    {{ form.default_postcode | as_crispy_field }}
+                                </div>
+                                <div class="ps-2 flex-grow-1">
+                                    {{ form.default_town_or_city | as_crispy_field }}
+                                </div>
+                            </div>
+                            {{ form.default_country | as_crispy_field }}
+                        </fieldset>
+                        <button class="btn btn-lg btn-cta bg-orange mb-2 text-white upper">Update Information</button>
+                    </form>
+                </div>
+                <!-- Order History -->
+                <div class="p-lg-5 ms-md-2 ms-0 mb-4">
+                </div>
+            </div>
         </div>
-    </div>
-</div>
+    </section>
+</main>
 {% endblock %}
