feat: Add context on_profile_page to Profile View an update toast. Add the context to toast in order to not see the shopping bag items when updating the profile information

--- a/templates/components/toasts/toast_success.html
+++ b/templates/components/toasts/toast_success.html
@@ -8,9 +8,7 @@
         </button>
     </div>
     <div class="toast-body bg-white rounded-bottom">
-
-
-        {% if grand_total > 10  %}
+        {% if grand_total > 10  and not on_profile_page %}
         <p class="logo-font bg-white text-black mt-2 liner">Your Bag ({{ product_count }})&nbsp;</p>
         <div class="bag-notification-wrapper">
             {% for item in bag_items %}
