--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -94,6 +94,11 @@
                     <div class="col-md-12">
                         <p class="text-muted">Thank you for your order! Enjoy the ride!</p>
                     </div>
+                    {% if from_profile %}
+                    <a href="{% url 'profile' %}" class="btn btn-cta">
+                        <span class="text-uppercase">Back to Profile</span>
+                    </a>
+                    {% endif %}
                 </div>
             </div>
         </div>
