--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -12,9 +12,20 @@
         <div class="container">
             <h2 class="liner upper">My Profile </h2>
             <button class="btn pb-4 back-button" onclick="goBack()">&larr; Back</button>
-            <div class="d-flex flex-column flex-md-row justify-content-around mt-md-3">
-                <div class="d-flex flex-row profile-details p-lg-5 p-4 mb-4">
-                    <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+            <div class="d-flex justify-content-center mb-4">
+                <button class="btn btn-lg btn-cta text-white px-4 py-4 me-3" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseInfo" aria-expanded="false" aria-controls="collapseInfo">
+                    <i class="fa-solid fa-user-pen fa-lg"></i>&nbsp;Profile Info
+                </button>
+                <button class="btn btn-lg btn-cta text-white px-4 py-4" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseHistory" aria-expanded="false" aria-controls="collapseHistory">
+                    <i class="fa-solid fa-cart-shopping fa-lg"></i>&nbsp;Order History
+                </button>
+            </div>
+            <div class="collapse" id="collapseInfo">
+                <div class="d-flex flex-row justify-content-center profile-details p-lg-5 p-4 mb-4">
+                    <form class="mt-3 w-100" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                        <h3 class="upper liner mb-3">Profile Info</h3>
                         {% csrf_token %}
                         <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
                             <legend class="fieldset-label small px-2 auto text-black mb-2">Details</legend>
@@ -42,8 +53,40 @@
                         <a href="{% url 'account_reset_password' %}" class="ms-3">Reset password</a>
                     </form>
                 </div>
-                <!-- Order History -->
-                <div class="p-lg-5 ms-md-2 ms-0 mb-4">
+            </div>
+            <!-- Order History -->
+            <div class="collapse" id="collapseHistory">
+                <div class="p-lg-5 p-4 mb-4 profile-details">
+                    <h3 class="upper liner">Order History</h3>
+                    {% for order in orders %}
+                    <div class="row my-3">
+                        <div class="col-sm-4 col-6">
+                            <p class="mb-0"><strong>Order Number:</strong></p>
+                            <p><a href="{% url 'order_history' order.order_number %}" title="{{ order.order_number }}">
+                                    <strong>{{ order.order_number}}</strong>
+                                </a></p>
+                        </div>
+                        <div class="col-sm-4 col-6">
+                            <p class="mb-0"><strong>Date:</strong></p>
+                            <p>{{ order.date|date:"d/m/Y" }}</p>
+                        </div>
+                        <div class="col-sm-4 col-6">
+                            <p class="mb-0"><strong>Order Total</strong></p>
+                            <p>{{ order.grand_total }} €</p>
+                        </div>
+                    </div>
+
+                    <div class="row pb-4 order-row">
+                        {% for item in order.lineitems.all %}
+                        <div class="col-2">
+                            {{ item.quantity }}
+                        </div>
+                        <div class="col-10">
+                            {{ item.product.title }}
+                        </div>
+                        {% endfor %}
+                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
