style: Add white text to back to profile button an template checkout_success

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -95,7 +95,7 @@
                         <p class="text-muted">Thank you for your order! Enjoy the ride!</p>
                     </div>
                     {% if from_profile %}
-                    <a href="{% url 'profile' %}" class="btn btn-cta">
+                    <a href="{% url 'profile' %}" class="btn btn-cta text-white">
                         <span class="text-uppercase">Back to Profile</span>
                     </a>
                     {% endif %}
