--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,9 +2,6 @@
 {% load static %}
 {% load humanize %}
 
-{% block extra_css %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
-{% endblock %}
 
 {% block content %}
 <main>
@@ -22,10 +19,10 @@
     <!-- Reasons Why Banner -->
     <div class="reasons-why-banner d-flex justify-content-center align-items-center upper bg-orange">
         <p class="mx-3 mb-0">
-            <i class="bi bi-truck"></i> Free Shipping Over {{ free_delivery_threshold|intcomma }}€
+            <i class="fa-solid fa-truck"></i> Free Shipping Over {{ free_delivery_threshold|intcomma }}€
         </p>
         <p class="mx-3 mb-0">
-            <i class="bi bi-box-seam"></i> Free Return Shipment
+            <i class="fa-solid fa-box"></i> Free Return Shipment
         </p>
     </div>
     <!-- Category Callouts -->
