--- a/templates/components/toasts/toast_success.html
+++ b/templates/components/toasts/toast_success.html
@@ -15,7 +15,11 @@
             {% for item in bag_items %}
             <div class="row">
                 <div class="col-3 my-1">
+                    {% if item.product.image %}
                     <img class="w-100" src="{{ item.product.image.url }}">
+                    {% else %}
+                    <img class="w-100" src="{{ MEDIA_URL }}products/default-no-image.webp">
+                    {% endif %}
                 </div>
                 <div class="col-9">
                     <p class="my-0"><strong>{{ item.product.title }}</strong></p>
