--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -129,4 +129,30 @@
 .product-management {
     background-color: #dfdfdf;
     box-shadow: 0 0.3rem 1.525rem -0.375rem rgb(0 0 0 / 10%);
+    width: 60vw;
+}
+
+.product-management .form-control,
+.product-management .form-select {
+    background-color: transparent;
+}
+
+select,
+select option {
+    color: #000;
+}
+
+select:invalid {
+    color: #6c757d;
+}
+
+.form-select:focus {
+    border: 1px solid #717171;
+}
+
+/*=============== Media ===============*/
+@media (max-width: 767px) {
+    .product-management {
+        width: auto;
+    }
 }
