--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -57,7 +57,11 @@
             {% endfor %}
             {% else %}
             <div class="d-flex flex-column align-items-center no-search-result p-5">
+                {% if request.GET.q %}
                 <p>No search results found for <strong>{{ request.GET.q|title }}.</strong></p>
+                {% else %}
+                <p>No bikes found.</p>
+                {% endif %}
                 <button class="btn btn-cta upper"><a href="{% url 'products' %}">Show all products</a></button>
                 {% endif %}
             </div>
