--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -21,7 +21,7 @@
     Select Image <input id="new-image" type="{{ widget.type }}" name="{{ widget.name }}"
         {% include "django/forms/widgets/attrs.html" %}>
 </span>
-
+<div id="message"></div>
 <!-- Filename -->
 <div class="py-1">
     <strong><span class="text-small text-bold" id="filename_{{ widget.name }}"></span></strong>
