feat: Add form structure from edit_product to add_prodcut and add js to display message for image selected

--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -84,6 +84,7 @@
 
 {% block postloadjs %}
 {{ block.super }}
+<!-- JS to display message after Image was selected -->
 <script>
     $(function () {
         const input = $('#new-image');
