--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -14,9 +14,62 @@
         <div class="d-flex flex-column flex-md-row justify-content-around mt-md-3">
             <div class="d-flex flex-row product-management p-lg-5 p-4 mb-4">
                 <form method="POST" action="{% url 'add_product' %}" class="w-100" enctype="multipart/form-data">
-                    <p class="upper liner">Add a Product&nbsp;</p>
+                    <h2 class="upper liner">Add a Product&nbsp;</h2>
                     {% csrf_token %}
-                    {{ form | crispy }}
+                    <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
+                        <legend class="fieldset-label fs-6 fw-bold auto text-black mb-2">Details</legend>
+                        <div class="w-100 text-start">
+                            {{ form.title|as_crispy_field }}
+                        </div>
+                        <div class="d-flex w-100">
+                            <div class="flex-grow-1">
+                                {{ form.sku|as_crispy_field }}
+                            </div>
+                            <div class="ps-2 flex-grow-1">
+                                {{ form.category|as_crispy_field }}
+                            </div>
+                        </div>
+                        <div class="w-100 text-start">
+                            {{ form.description|as_crispy_field }}
+                        </div>
+                    </fieldset>
+                    <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
+                        <legend class="fieldset-label fs-6 fw-bold auto text-black mb-2">Image</legend>
+                        <div class="d-flex w-100">
+                            <div class="flex-grow-1">
+                                {{ form.image }}
+                            </div>
+                        </div>
+                    </fieldset>
+                    <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
+                        <legend class="fieldset-label fs-6 fw-bold auto text-black mb-2">Pricing</legend>
+                        <div class="d-flex w-100">
+                            <div class="flex-grow-1">
+                                {{ form.retail_price|as_crispy_field }}
+                            </div>
+                            <div class="ps-2 flex-grow-1">
+                                {{ form.sale|as_crispy_field }}
+                                {{ form.sale_price|as_crispy_field }}
+                            </div>
+                        </div>
+                    </fieldset>
+                    <fieldset class="rounded mb-3 d-flex flex-column align-items-center">
+                        <legend class="fieldset-label fs-6 fw-bold auto text-black mb-2">Additional Information</legend>
+                        <div class="d-flex w-100">
+                            <div class="flex-grow-1">
+                                {{ form.brand|as_crispy_field }}
+                                {{ form.bike_type|as_crispy_field }}
+                                {{ form.gender|as_crispy_field }}
+                                {{ form.stock|as_crispy_field }}
+                            </div>
+                            <div class="ps-2 flex-grow-1">
+                                {{ form.derailleur|as_crispy_field }}
+                                {{ form.wheel_size|as_crispy_field }}
+                                {{ form.rating|as_crispy_field }}
+                                {{ form.material|as_crispy_field }}
+                            </div>
+                        </div>
+                    </fieldset>
                     <div class="text-right">
                         <a class="btn btn-secondary rounded-0 mt-3" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-cta text-white" type="submit">Add Product</button>
@@ -27,3 +80,19 @@
     </section>
 </main>
 {% endblock content %}
+
+{% block postloadjs %}
+{{ block.super }}
+<!-- JS to display message after Image was selected -->
+<script>
+    $(function () {
+        const input = $('#new-image');
+        const message = $('#message');
+
+        input.on('change', () => {
+            const fileName = input.val().split('\\').pop();
+            message.text(`Image will be set to: ${fileName}`);
+        });
+    });
+</script>
+{% endblock %}
