--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -55,6 +55,9 @@
                 <div
                     class="col-lg-2 {% if forloop.counter == 3 %}d-none d-md-flex{% elif forloop.counter == 4 %}d-none d-lg-flex{% endif %} col-md-3 col-sm-4 col-12 d-flex flex-column align-items-center product-container mb-5 mx-3 py-3">
                     <div class="product-card">
+                        {% if product.sale %}
+                        <div class="sale-badge">SALE</div>
+                        {% endif %}
                         <div class="product-image-container">
                             <a href="{% url 'product_detail' product.pk %}"><img class="product-img"
                                     src="{{ product.image.url }}" alt="{{ product.title }}"></a>
