fix: product ratings starts display correctly

--- a/products/templates/products/components/product_card.html
+++ b/products/templates/products/components/product_card.html
@@ -13,11 +13,12 @@
                 src="{{ MEDIA_URL }}products/default-no-image.webp" alt="{{ product.title }}"></a>
         {% endif %}
     </div>
-    {% for i in "x"|ljust:product.rating %}
+    {% for i in "12345" %}
+    {% if i|add:0 < product.rating %}
     <i class="fa fa-star fa-xs text-dark"></i>
-    {% endfor %}
-    {% for i in product.rating|add:"-5"|floatformat:"0"|default:"1" %}
+    {% else %}
     <i class="fa fa-star-o fa-xs text-dark"></i>
+    {% endif %}
     {% endfor %}
 </div>
 <div class="product-content d-flex flex-column align-items-start">
